// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HomeScreen counter applies the danger color when the current counter is greater than the max counter 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "flex": 1,
      "paddingVertical": 16,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "flex-end",
          "paddingHorizontal": 8,
        }
      }
    >
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "height": 60,
              "justifyContent": "center",
              "paddingHorizontal": 16,
              "paddingVertical": 8,
            },
            undefined,
            Object {
              "backgroundColor": "transparent",
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "fontSize": 16,
                "fontWeight": "600",
              },
              Object {
                "color": "#141414",
              },
            ]
          }
        >
          Reset
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#C4C4C4",
            "borderRadius": 180,
            "height": 360,
            "justifyContent": "center",
            "width": 360,
          }
        }
      >
        <Text
          includeFontPadding={false}
          style={
            Array [
              Object {
                "fontSize": 128,
                "fontVariant": Array [
                  "tabular-nums",
                ],
                "fontWeight": "bold",
              },
              Object {
                "color": "#F44336",
              },
            ]
          }
          testID="currentVisitorText"
        >
          4
        </Text>
        <Text
          style={
            Object {
              "backgroundColor": "#000000",
              "height": 1,
              "width": 160,
            }
          }
        />
        <Text
          includeFontPadding={false}
          style={
            Object {
              "fontSize": 64,
              "fontVariant": Array [
                "tabular-nums",
              ],
              "marginTop": 16,
            }
          }
          testID="maxVisitorText"
        >
          3
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "paddingHorizontal": 16,
        }
      }
    >
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "height": 60,
              "justifyContent": "center",
              "paddingHorizontal": 16,
              "paddingVertical": 8,
            },
            Object {
              "flex": 1,
            },
            Object {
              "backgroundColor": "transparent",
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "fontSize": 16,
                "fontWeight": "600",
              },
              Object {
                "color": "#141414",
              },
            ]
          }
        >
          Exit
        </Text>
      </View>
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "height": 60,
              "justifyContent": "center",
              "paddingHorizontal": 16,
              "paddingVertical": 8,
            },
            Object {
              "flex": 1,
            },
            Object {
              "backgroundColor": "#141414",
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "fontSize": 16,
                "fontWeight": "600",
              },
              Object {
                "color": "#ffffff",
              },
            ]
          }
        >
          Enter
        </Text>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`HomeScreen counter applies the warning color when the current counter equals to the max counter 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "flex": 1,
      "paddingVertical": 16,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "flex-end",
          "paddingHorizontal": 8,
        }
      }
    >
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "height": 60,
              "justifyContent": "center",
              "paddingHorizontal": 16,
              "paddingVertical": 8,
            },
            undefined,
            Object {
              "backgroundColor": "transparent",
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "fontSize": 16,
                "fontWeight": "600",
              },
              Object {
                "color": "#141414",
              },
            ]
          }
        >
          Reset
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#C4C4C4",
            "borderRadius": 180,
            "height": 360,
            "justifyContent": "center",
            "width": 360,
          }
        }
      >
        <Text
          includeFontPadding={false}
          style={
            Array [
              Object {
                "fontSize": 128,
                "fontVariant": Array [
                  "tabular-nums",
                ],
                "fontWeight": "bold",
              },
              Object {
                "color": "#FFC107",
              },
            ]
          }
          testID="currentVisitorText"
        >
          3
        </Text>
        <Text
          style={
            Object {
              "backgroundColor": "#000000",
              "height": 1,
              "width": 160,
            }
          }
        />
        <Text
          includeFontPadding={false}
          style={
            Object {
              "fontSize": 64,
              "fontVariant": Array [
                "tabular-nums",
              ],
              "marginTop": 16,
            }
          }
          testID="maxVisitorText"
        >
          3
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "paddingHorizontal": 16,
        }
      }
    >
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "height": 60,
              "justifyContent": "center",
              "paddingHorizontal": 16,
              "paddingVertical": 8,
            },
            Object {
              "flex": 1,
            },
            Object {
              "backgroundColor": "transparent",
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "fontSize": 16,
                "fontWeight": "600",
              },
              Object {
                "color": "#141414",
              },
            ]
          }
        >
          Exit
        </Text>
      </View>
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "height": 60,
              "justifyContent": "center",
              "paddingHorizontal": 16,
              "paddingVertical": 8,
            },
            Object {
              "flex": 1,
            },
            Object {
              "backgroundColor": "#141414",
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "fontSize": 16,
                "fontWeight": "600",
              },
              Object {
                "color": "#ffffff",
              },
            ]
          }
        >
          Enter
        </Text>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`HomeScreen renders correctly 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "flex": 1,
      "paddingVertical": 16,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "flex-end",
          "paddingHorizontal": 8,
        }
      }
    >
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "height": 60,
              "justifyContent": "center",
              "paddingHorizontal": 16,
              "paddingVertical": 8,
            },
            undefined,
            Object {
              "backgroundColor": "transparent",
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "fontSize": 16,
                "fontWeight": "600",
              },
              Object {
                "color": "#141414",
              },
            ]
          }
        >
          Reset
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#C4C4C4",
            "borderRadius": 180,
            "height": 360,
            "justifyContent": "center",
            "width": 360,
          }
        }
      >
        <Text
          includeFontPadding={false}
          style={
            Array [
              Object {
                "fontSize": 128,
                "fontVariant": Array [
                  "tabular-nums",
                ],
                "fontWeight": "bold",
              },
              Object {},
            ]
          }
          testID="currentVisitorText"
        >
          0
        </Text>
        <Text
          style={
            Object {
              "backgroundColor": "#000000",
              "height": 1,
              "width": 160,
            }
          }
        />
        <Text
          includeFontPadding={false}
          style={
            Object {
              "fontSize": 64,
              "fontVariant": Array [
                "tabular-nums",
              ],
              "marginTop": 16,
            }
          }
          testID="maxVisitorText"
        >
          3
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "paddingHorizontal": 16,
        }
      }
    >
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "height": 60,
              "justifyContent": "center",
              "paddingHorizontal": 16,
              "paddingVertical": 8,
            },
            Object {
              "flex": 1,
            },
            Object {
              "backgroundColor": "transparent",
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "fontSize": 16,
                "fontWeight": "600",
              },
              Object {
                "color": "#141414",
              },
            ]
          }
        >
          Exit
        </Text>
      </View>
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "height": 60,
              "justifyContent": "center",
              "paddingHorizontal": 16,
              "paddingVertical": 8,
            },
            Object {
              "flex": 1,
            },
            Object {
              "backgroundColor": "#141414",
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "fontSize": 16,
                "fontWeight": "600",
              },
              Object {
                "color": "#ffffff",
              },
            ]
          }
        >
          Enter
        </Text>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;
